syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.market.grpc";
option java_outer_classname = "PortfolioProto";

package market;

// ====== REQUESTS ======

message PortfolioRequest {
  int64 portfolioId = 1;
}


message PortfolioItem {
  string symbol = 1;
  string name = 2;
  string exchange = 3;
  double quantity = 4;
  string averagePurchasePrice = 5;
  string percentageChange = 6;
  string currentPrice = 7;
  string currency = 8;
  string totalValue = 9;
  string profit = 10;
  string profitPercentage = 11;
}

// ====== RESPONSES ======

message PortfolioResponse {
  int64 portfolioId = 1;
  string userId = 2;
  string portfolioName = 3;
  string investedValue = 4;
  string currentValue = 5;
  string profitValue = 6;
  string profitPercentage = 7;
  repeated PortfolioItem items = 8;
}

// ====== SERVICE ======

service PortfolioService {
  rpc StreamPortfolio(PortfolioRequest) returns (stream PortfolioResponse);
}
